[tool.poetry]
name = "sparkwarehouse"
version = "0.1.0"
description = ""
authors = ["Deepaksai1919 <31119831+Deepaksai1919@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.0"
pyspark = "^3.5.0"
google-cloud-storage = "^2.14.0"
gcsfs = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
